Added: demo script added

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -16,8 +16,9 @@
         <noscript>Please run this app with your browser set to JavaScript enabled</noscript>
         <div id="root">
             <div id="back">
-                <div id="tsparticles"><canvas data-generated="false" style="width: 100% !important; height: 100% !important; position: fixed !important; z-index: 0 !important; top: 0px !important; left: 0px !important; background-color: rgb(40, 44, 52); pointer-events: initial;" width="300" height="1592"></canvas>
-                </div>
+                <!-- <div id="tsparticles">  -->
+                    <canvas id="tsparticles" data-generated="false" style="width: 100% !important; height: 100% !important; position: fixed !important; z-index: 0 !important; top: 0px !important; left: 0px !important; background-color: rgb(40, 44, 52); pointer-events: initial;" width="300" height="1592"></canvas>
+                <!-- </div> -->
             </div>
             <div id="article" class="">
 
