Add: set background canvas
used matterjs ;when scrolled pages background objects are moved

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -7,24 +7,63 @@
         <meta name="theme-color" content="#000000">
         <mata name ="description" content="Website created using flask framework">
         <link rel="apple-touch-icon" href="./images/favicon.png">
+        <!--import css script-->
+        <link rel="stylesheet" href="../style/main.css">
         <title>K.Yamakawa(lCyou) - resume</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
+        <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script>
     </head>
 
     <body>
         <noscript>Please run this app with your browser set to JavaScript enabled</noscript>
         <div id="root">
-            <div id="back">
-                <!-- <div id="tsparticles">  -->
-                    <canvas id="tsparticles" data-generated="false" style="width: 100% !important; height: 100% !important; position: fixed !important; z-index: 0 !important; top: 0px !important; left: 0px !important; background-color: rgb(40, 44, 52); pointer-events: initial;" width="300" height="1592"></canvas>
-                <!-- </div> -->
-            </div>
+            
             <div id="article" class="">
+                <p>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
+                    a</br>
 
+                </p>
             </div>
-        
-        
+            
+        </div>
         <script src="../js/matter.js"></script>
+        <canvas id="background"></canvas>
     </body>
 </html>
