--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@
 body {
 	margin: 0 10%;
 	color: #57413b;
-	background-color: #fffcf5;
+	background-color:#fffcf5;
 	font: 1.25rem/1.5 'Roboto', sans-serif;
 }
 
@@ -35,6 +35,11 @@ h1 {
 h2 {
 	margin-top: 40px;
 	font-size: 1.5rem;
+}
+
+p {
+    margin: 0;
+    color: #000;
 }
 
 canvas {
