--- a/templates/resume.html
+++ b/templates/resume.html
@@ -10,9 +10,10 @@
         <!--import css script-->
         <link rel="stylesheet" href="../style/main.css">
         <title>K.Yamakawa(lCyou) - resume</title>
+        <script src="../js/matter.js"></script>
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script> -->
     </head>
 
     <body>
@@ -21,49 +22,38 @@
             
             <div id="article" class="">
                 <p>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
                     
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
-                    a</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+
 
                 </p>
             </div>
             
         </div>
-        <script src="../js/matter.js"></script>
+        <script src="../js/background.js"></script>
         <canvas id="background"></canvas>
     </body>
 </html>
