change: rename js folder

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -10,7 +10,7 @@
         <!--import css script-->
         <link rel="stylesheet" href="../style/main.css">
         <title>K.Yamakawa(lCyou) - resume</title>
-        <script src="../js/matter.js"></script>
+        <script src="../Action/matter.js"></script>
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script> -->
@@ -27,6 +27,7 @@
                     q</br>q</br>
                     q</br>
                     
+                    <div id="wrapper">
                     q</br>
                     q</br>
                     q</br>q</br>
@@ -49,11 +50,32 @@
                     q</br>
 
 
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+                    q</br>
+                    q</br>
+                    q</br>q</br>
+                    q</br>
+
+
+                    </div>
                 </p>
             </div>
             
         </div>
-        <script src="../js/background.js"></script>
+        <script src="../Action/background.js"></script>
         <canvas id="background"></canvas>
     </body>
 </html>
