--- a/templates/auth/resume.html
+++ b/templates/auth/resume.html
@@ -8,9 +8,10 @@
         <mata name ="description" content="Website created using flask framework">
         <link rel="apple-touch-icon" href="./images/favicon.png">
         <!--import css script-->
-        <link rel="stylesheet" href="../style/main.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <title>K.Yamakawa(lCyou) - resume</title>
-        <script src="../Action/matter.js"></script>
+        <script src="{{ url_for('static', filename='js/matter.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/matter.min.js') }}"></script>
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script> -->
