fixed: file place fixed

--- a/templates/auth/resume.html
+++ b/templates/auth/resume.html
@@ -10,8 +10,10 @@
         <!--import css script-->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <title>K.Yamakawa(lCyou) - resume</title>
-        <script src="{{ url_for('static', filename='js/matter.js') }}"></script>
+        <script type="text/javascript"src="{{ url_for('static', filename='js/matter.js') }}"></script>
         <script src="{{ url_for('static', filename='js/matter.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/matter-wrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/matter-wrap.js') }}"></script>
         <!-- <script src="https://cdn.tailwindcss.com"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/matter-js@0.12.0/build/matter.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/matter-wrap@0.2.0/build/matter-wrap.min.js"></script> -->
